--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CHANGE ME</title>
+    <title>Casey World</title>
+    <link rel="stylrsheet" href="style.css" />
   </head>
 
   <body>
     <!-- All content goes here -->
     <div id="all-contents">
-      
+      <nav>
+      <h1> Casey's World</h1>
+      <ul id="nav-ul">
+        <li class="nav-li">
+          <a href="index.html">Home</a>
+        </li>
+        <li class="nav-li">
+          <a href="porfolio.html">Portfolio</a>
+        </li>
+        </ul>
+      </nav>
+
+      <main>
+        <!--Sidebar section-->
+        <div class="sidebar">
+<img class="sidebar-img" src="https://www.google.com/imgres?q=sports&imgurl=https%3A%2F%2Fstatic01.nyt.com%2Fimages%2F2020%2F07%2F21%2Fautossell%2Fsports-reboot-promo-still%2Fsports-reboot-promo-still-videoLarge.jpg&imgrefurl=https%3A%2F%2Fwww.nytimes.com%2F2020%2F10%2F06%2Flearning%2Fwhat-ideas-do-you-have-to-improve-your-favorite-sport.html&docid=9LBS2eZWYSIgHM&tbnid=KIZZxekx6MdxtM&vet=12ahUKEwjB1pHK7MmPAxUgmWoFHTM0FwgQM3oECBsQAA..i&w=768&h=507&hcb=2&ved=2ahUKEwjB1pHK7MmPAxUgmWoFHTM0FwgQM3oECBsQAA">
+        </div>
+
+        <!--Content section-->
+        <div class="content">
+          <h2> Casey Washington</h2>
+          <p>Student at McDonogh 35</p>
+
+          <!--Interests section-->
+          <div id=" "interests">
+            <h3>Interests</h3>
+            <ul>
+               <li>softball</li> 
+               <li>volleyball</li>
+               <li>playing roblox</li>
+            </ul>
+        </div>
+      </div>
     </div>
   </body>
 </html>
