--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Casey World</title>
-    <link rel="stylrsheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
