--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
    <head>
-     <title>Casey's World </title>
+    <title>Casey's Website</title>
+  <link rel="stylesheet" href="style.css" />
    </head>
 
    <body>
@@ -20,9 +21,17 @@
         <div class="content">
            <h1>Portfolio</h1>
            <ul id="portfolio">
+            <li>
+  <a href="fsd-projects/platformer/">Platformer: A cannon-dodging adventure game for Halleb0t</a>
+</li>
+<li>
+  <a href="fsd-projects/bouncing-box/">Bouncing Box: A fun introduction to web game development</a>
+</li>
+<li>
+  <a href="fsd-projects/circularity/">Circularity: A poetic motion experiment with circles</a>
+</li>
 
          </ul>
         </div>
     </main>
-   </body>
-</html>
+  
