--- a/portfolio.html
+++ b/portfolio.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html>
-   <head>
-    <title>Casey's Website</title>
-  <link rel="stylesheet" href="style.css" />
-   </head>
+  <head>
+    <title>Casey Worl</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-   <body>
+  <body>
     <!-- All content goes here -->
-     <div id="all-contents">
-       <nav>
-         <h1>Casey's Worlds </h1>
-         <ul id="nav-ul">
-            <li class="nav-li">
-                <a href="index.html">Home</a>
-            </li>
-         </ul>
-       </nav>
+    <div id="all-contents">
+      <nav>
+        <h1> Casey World</h1>
+        <ul id="nav-ul">
+          <li class="nav-li">
+  <a href="index.html">Home</a>
+</li>
+<li class="nav-li">
+  <a href="portfolio.html">Portfolio</a>
+</li>
 
-       <main>
-        <div class="content">
-           <h1>Portfolio</h1>
-           <ul id="portfolio">
-            <li>
+</ul>
+
+  </nav>
+
+  <main>
+    <div class="content">
+    <h1>Portfolio</h1>
+    <ul id="portfolio">
+      <ul>
+  <li>
   <a href="fsd-projects/platformer/">Platformer: A cannon-dodging adventure game for Halleb0t</a>
 </li>
 <li>
@@ -30,8 +36,11 @@
 <li>
   <a href="fsd-projects/circularity/">Circularity: A poetic motion experiment with circles</a>
 </li>
+  </ul>
+  </div>
 
-         </ul>
-        </div>
-    </main>
-  
+  </main>
+      
+    </div>
+  </body>
+</html>
