--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <a href="index.html">Home</a>
         </li>
         <li class="nav-li">
-          <a href="porfolio.html">Portfolio</a>
+          <a href="portfolio.html">Portfolio</a>
         </li>
         </ul>
       </nav>
@@ -23,7 +23,7 @@
       <main>
         <!--Sidebar section-->
         <div class="sidebar">
-<img class="sidebar-img" src="https://www.google.com/imgres?q=sports&imgurl=https%3A%2F%2Fstatic01.nyt.com%2Fimages%2F2020%2F07%2F21%2Fautossell%2Fsports-reboot-promo-still%2Fsports-reboot-promo-still-videoLarge.jpg&imgrefurl=https%3A%2F%2Fwww.nytimes.com%2F2020%2F10%2F06%2Flearning%2Fwhat-ideas-do-you-have-to-improve-your-favorite-sport.html&docid=9LBS2eZWYSIgHM&tbnid=KIZZxekx6MdxtM&vet=12ahUKEwjB1pHK7MmPAxUgmWoFHTM0FwgQM3oECBsQAA..i&w=768&h=507&hcb=2&ved=2ahUKEwjB1pHK7MmPAxUgmWoFHTM0FwgQM3oECBsQAA">
+<img class="sidebar-img" src="sports-tools.jpg">
         </div>
 
         <!--Content section-->
