--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Casey Worl</title>
+    <title>Casey's World</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -9,18 +9,16 @@
     <!-- All content goes here -->
     <div id="all-contents">
       <nav>
-        <h1> Casey World</h1>
-        <ul id="nav-ul">
-          <li class="nav-li">
-  <a href="index.html">Home</a>
-</li>
-<li class="nav-li">
-  <a href="portfolio.html">Portfolio</a>
-</li>
-
-</ul>
-
-  </nav>
+         <h1>Casey's Amazing Website</h1>
+  <ul id="nav-ul">
+    <li class="nav-li">
+      <a href="index.html">Home</a>
+    </li>
+    <li class="nav-li">
+      <a href="portfolio.html">Portfolio</a>
+    </li>
+  </ul>
+    </nav>
 
   <main>
     <div class="content">
